force-app/main/default/objects/Opportunity/fields/Sale_Value_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sale_Value_Amount__c</fullName>
    <label>Sale Value Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>