force-app/main/default/objects/Opportunity/fields/send_Notification_Bulk__c.field-meta.xml
<CustomField>
    <fullName>send_Notification_Bulk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>send Notification(Bulk)</label>
    <type>Checkbox</type>
</CustomField>