force-app/main/default/objects/Opportunity/fields/Specify_Country__c.field-meta.xml
<CustomField>
    <fullName>Specify_Country__c</fullName>
    <label>Specify Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>