force-app/main/default/objects/Opportunity/fields/Sub_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Document_Type__c</fullName>
    <label>Sub Document Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>Aadhaar Card</fullName>
            </value>
            <value>
                <fullName>Pan Card</fullName>
            </value>
            <value>
                <fullName>Draft AOS</fullName>
            </value>
            <value>
                <fullName>Customer Signed</fullName>
            </value>
            <value>
                <fullName>AOS</fullName>
            </value>
            <value>
                <fullName>Document Using the Link</fullName>
            </value>
            <value>
                <fullName>Loan Sanction Letter</fullName>
            </value>
            <value>
                <fullName>Disbursement Cheque</fullName>
            </value>
            <value>
                <fullName>Affidavit</fullName>
            </value>
            <value>
                <fullName>Draft Sale deed</fullName>
            </value>
            <value>
                <fullName>Signed Board of Resolution</fullName>
            </value>
            <value>
                <fullName>Form 32</fullName>
            </value>
            <value>
                <fullName>Original Sale Deed</fullName>
            </value>
            <value>
                <fullName>Documents Delivered</fullName>
            </value>
            <value>
                <fullName>Challan</fullName>
            </value>
            <value>
                <fullName>System Generated AOS</fullName>
            </value>
            <value>
                <fullName>System Generated Board of Resolution</fullName>
            </value>
            <value>
                <fullName>System Generated Demand Letter</fullName>
            </value>
            <value>
                <fullName>System Generated Sale Deed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>System Generated Form 32</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>