force-app/main/default/objects/Opportunity/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Requested</fullName>
            </value>
            <value>
                <fullName>Epitome Initiated</fullName>
            </value>
            <value>
                <fullName>Plot Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>