force-app/main/default/objects/Opportunity/fields/Time_Of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Time_Of_Registration__c</fullName>
    <label>Time Of Registration</label>
    <type>Time</type>
</CustomField>