force-app/main/default/objects/Opportunity/fields/Total_Amount_Recieve__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Recieve__c</fullName>
    <label>Total Amount Recieve</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>