force-app/main/default/objects/Opportunity/fields/Total_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Base_Rate__c</fullName>
    <formula>Quote__r.Total_Basic_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>