force-app/main/default/objects/Opportunity/fields/Total_Collected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected_Amount__c</fullName>
    <formula>IF(
    ISPICKVAL(Funding_Type__c, &quot;Bank Fund&quot;), 
    Collected_Amount__c + Loan_Sanctioned_Amount__c, 
    Collected_Amount__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Collected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>