force-app/main/default/objects/Opportunity/fields/Total_GST_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_Charges__c</fullName>
    <label>Total GST Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>