force-app/main/default/objects/Opportunity/fields/Total_Sale_Price_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Sale_Price_with_GST__c</fullName>
    <label>Total Sale Price with GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>