force-app/main/default/objects/Opportunity/fields/Type_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Booking__c</fullName>
    <label>Type of Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Judiciary</fullName>
            </value>
            <value>
                <fullName>SBI</fullName>
            </value>
            <value>
                <fullName>IDBI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>