force-app/main/default/objects/Opportunity/fields/Unit_Cancellation_CRM_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cancellation_CRM_Approval_Status__c</fullName>
    <label>Unit Cancellation CRM Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>