force-app/main/default/objects/Opportunity/fields/Update_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Update_Date_Time__c</fullName>
    <label>Update Date-Time</label>
    <type>DateTime</type>
</CustomField>