force-app/main/default/objects/Opportunity/fields/Virtual_Account_IFSC__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Account_IFSC__c</fullName>
    <formula>Unit__r.Virtual_Account_IFSC__c</formula>
    <label>Virtual Account IFSC</label>
    <type>Text</type>
</CustomField>