force-app/main/default/objects/Opportunity/fields/Virtual_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Account_Name__c</fullName>
    <formula>Unit__r.Virtual_Account_Name__c</formula>
    <label>Virtual Account Name</label>
    <type>Text</type>
</CustomField>