force-app/main/default/objects/Opportunity/fields/Virtual_Account_UPI_QR__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Account_UPI_QR__c</fullName>
    <formula>Unit__r.Virtual_Account_UPI__c</formula>
    <label>Virtual Account UPI QR</label>
    <type>Text</type>
</CustomField>