force-app/main/default/objects/Opportunity/fields/Visited_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Visited_Date_Time__c</fullName>
    <label>Visited Date Time</label>
    <type>DateTime</type>
</CustomField>