force-app/main/default/objects/Opportunity/fields/X10_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>X10_Amount_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>10% Amount Collected</label>
    <type>Checkbox</type>
</CustomField>