force-app/main/default/objects/Opportunity/fields/X10_Collected__c.field-meta.xml
<CustomField>
    <fullName>X10_Collected__c</fullName>
    <formula>( (Sale_Value_Amount__c -  Outstanding_Amount__c ) / Sale_Value_Amount__c)*100 &gt;= 10</formula>
    <label>10% Collected</label>
    <type>Checkbox</type>
</CustomField>