force-app/main/default/objects/Opportunity/fields/X10_Recieved__c.field-meta.xml
<CustomField>
    <fullName>X10_Recieved__c</fullName>
    <label>10% Recieved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>