force-app/main/default/objects/Opportunity/recordTypes/Bulk_Sales.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Sales</fullName>
    <active>false</active>
    <businessProcess>Sale Process</businessProcess>
    <label>Bulk Sales</label>
</RecordType>