force-app/main/default/objects/Opportunity/validationRules/AOS_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AOS_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( AOS_Stage__c , &quot;Not Applicable&quot;),
    ISPICKVAL(Funding_Type__c, &quot;Bank Fund&quot;)
)</errorConditionFormula>
    <errorMessage>For Bank fund type, AOS is required</errorMessage>
</ValidationRule>