force-app/main/default/objects/Opportunity/validationRules/Cancellation_Status_Request_Recieved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Status_Request_Recieved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Sub_Stage__c, &quot;Customer Requested&quot;),
    ISBLANK(TEXT(Cancellation_Status__c))
)</errorConditionFormula>
    <errorMessage>When Sub Stage is &apos;Customer Requested&apos;, you must select &apos;Request Received&apos; as the Cancellation Status.</errorMessage>
</ValidationRule>