force-app/main/default/objects/Opportunity/validationRules/Cancelled_Stage_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Stage_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( StageName , &quot;Cancelled&quot;),
    OR(
        ISPICKVAL(PRIORVALUE(StageName), &quot;Registered&quot;),
        ISPICKVAL(PRIORVALUE(StageName), &quot;Document Delivery&quot;)
    )
)</errorConditionFormula>
    <errorMessage>You cannot change the Status to &apos;Cancelled&apos; if it was previously &apos;Registered&apos; or &apos;Document Delivery.</errorMessage>
</ValidationRule>