force-app/main/default/objects/Opportunity/validationRules/Enforce_Booked_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Booked_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( StageName , &quot;Booked&quot;),
    Total_Collected_Amount__c &lt; 100000,
    NOT(X10_Amount_Collected__c)
)</errorConditionFormula>
    <errorMessage>Total Collected Amount must be greater than 100,000 to move the Stage to &apos;Booked&apos;.</errorMessage>
</ValidationRule>