force-app/main/default/objects/Opportunity/validationRules/Enforce_Registration_Initiation.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Registration_Initiation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Registration Initiate&quot;),
    Outstanding_Amount__c &gt; 0  
)</errorConditionFormula>
    <errorMessage>Please Settle all the Payments.</errorMessage>
</ValidationRule>