force-app/main/default/objects/Opportunity/validationRules/Ensure_Challan_In_Sub_Document_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Challan_In_Sub_Document_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),  
    ISPICKVAL(StageName, &quot;Registration Initiate&quot;),  
    NOT(INCLUDES(Sub_Document_Type__c, &quot;Challan&quot;))
)</errorConditionFormula>
    <errorMessage>Sub Document Type must contain &apos;Challan&apos; when changing the Stage to &apos;Reg Initiate&apos;.</errorMessage>
</ValidationRule>