force-app/main/default/objects/Opportunity/validationRules/Ensure_Registration_Date_On_Stage_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Registration_Date_On_Stage_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Registration Scheduled&quot;),
    ISBLANK(Date_of_Registration__c)
)</errorConditionFormula>
    <errorMessage>You must enter a &apos;Date of Registration&apos; when changing the Stage to &apos;Reg Scheduled&apos;.</errorMessage>
</ValidationRule>