force-app/main/default/objects/Opportunity/validationRules/Fund_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fund_Type_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(
       ISPICKVAL(StageName, &quot;Loan Process&quot;),
       ISPICKVAL(StageName, &quot;AOS&quot;),
       ISPICKVAL(StageName, &quot;Progressive&quot;)
    ),
    ISCHANGED(StageName),  
    ISPICKVAL(PRIORVALUE(StageName), &quot;Onboarded&quot;),
    ISBLANK(TEXT(Funding_Type__c))
)</errorConditionFormula>
    <errorMessage>Funding Type cannot be blank if the prior Stage was &apos;Onboarded&apos;.</errorMessage>
</ValidationRule>