force-app/main/default/objects/Opportunity/validationRules/KYC_Verification_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>KYC_Verification_Logic</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(KYC_Verification__c),
    ISPICKVAL(KYC_Verification__c, &quot;Initiated&quot;),
    NOT(ISPICKVAL(StageName, &quot;KYC Verification&quot;))
)</errorConditionFormula>
    <errorMessage>KYC Verification cannot be set to &apos;Initiated&apos; unless the Stage is &apos;KYC Verification&apos;.</errorMessage>
</ValidationRule>