force-app/main/default/objects/Opportunity/validationRules/NOC_cannot_be_set_to_Initiated.validationRule-meta.xml
<ValidationRule>
    <fullName>NOC_cannot_be_set_to_Initiated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(NOC__c, &quot;Initiated&quot;),
     NOT( Unit__r.Mortgage__c )
)</errorConditionFormula>
    <errorMessage>NOC cannot be set to &apos;Initiated&apos; when Mortgage is false</errorMessage>
</ValidationRule>