force-app/main/default/objects/Opportunity/validationRules/Orignal_Upload_Sales_Deed.validationRule-meta.xml
<ValidationRule>
    <fullName>Orignal_Upload_Sales_Deed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Sale_Deed_Status__c),
ISPICKVAL( Sale_Deed_Status__c , &quot;Original Uploaded&quot;),
NOT(INCLUDES(Sub_Document_Type__c, &quot;Original Sale Deed&quot;))
)</errorConditionFormula>
    <errorMessage>Upload Original Sale Deed Before Making The Status To Original Uploaded</errorMessage>
</ValidationRule>