force-app/main/default/objects/Opportunity/validationRules/Payment_Collection_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Collection_validation</fullName>
    <active>true</active>
    <description>Restriction on Status if 10% Payment is not collected</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;KYC Verification&quot;),
    NOT( X10_Amount_Collected__c ) 
)</errorConditionFormula>
    <errorMessage>10% Payment is not Collected</errorMessage>
</ValidationRule>