force-app/main/default/objects/Opportunity/validationRules/Plot_should_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Plot_should_not_be_null</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL(Unit__c) || ISBLANK(Unit__c)</errorConditionFormula>
    <errorMessage>Please fill the Plot value</errorMessage>
</ValidationRule>