force-app/main/default/objects/Opportunity/validationRules/Prevent_Onboarded_Without_KYC.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Onboarded_Without_KYC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Onboarded&quot;),
    NOT(ISPICKVAL(KYC_Verification__c, &quot;Approved&quot;))
)</errorConditionFormula>
    <errorMessage>KYC Verification must be Approved before changing the Stage to Onboarded.</errorMessage>
</ValidationRule>