force-app/main/default/objects/Opportunity/validationRules/Refund_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Status_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    TEXT( Refund_Status__c ) = &quot;Initiate&quot;,
    TEXT( Refund_Approval_Status__c ) &lt;&gt; &quot;Approved&quot;
)</errorConditionFormula>
    <errorMessage>Refund Approval Status Should Be Approved To Initiate Refund!</errorMessage>
</ValidationRule>