force-app/main/default/objects/Opportunity/validationRules/Registration_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Date_of_Registration__c ),Date_of_Registration__c  &lt; TODAY())</errorConditionFormula>
    <errorMessage>Registration Date cannot be in the past. Please enter today’s date or a future date.</errorMessage>
</ValidationRule>