force-app/main/default/objects/Opportunity/validationRules/Restrict_AOS_Stage_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_AOS_Stage_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(AOS_Stage__c, &quot;Received&quot;),
    NOT(INCLUDES(Sub_Document_Type__c, &quot;Customer Signed&quot;))
)</errorConditionFormula>
    <errorMessage>AOS Stage cannot be moved to &apos;Received&apos; unless &apos;Customer Signed&apos; Document is not uploaded.</errorMessage>
</ValidationRule>