force-app/main/default/objects/Opportunity/validationRules/Restrict_Funding_Type_Change_Outside_Onb.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Funding_Type_Change_Outside_Onb</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Funding_Type__c),
    NOT(ISPICKVAL(StageName, &quot;Onboarded&quot;))
)</errorConditionFormula>
    <errorMessage>Funding Type can only be changed when the Stage is &apos;Onboarded&apos;.</errorMessage>
</ValidationRule>