force-app/main/default/objects/Opportunity/validationRules/Restrict_Loan_Status_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Loan_Status_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Loan_Status__c , &quot;Non Eligible&quot;),
    ISCHANGED( StageName )
)</errorConditionFormula>
    <errorMessage>You cannot change the Opportunity Stage because the Loan Status is &apos;Not Eligible&apos;.</errorMessage>
</ValidationRule>