force-app/main/default/objects/Opportunity/validationRules/Restrict_Sale_Value_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Sale_Value_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Sale_Value_Amount__c),
    NOT(ISNEW()),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>After record creation, only System Administrator can modify the Sale Value Amount.</errorMessage>
</ValidationRule>