force-app/main/default/objects/Opportunity/validationRules/Restrict_Stage_Change_Without_Challan.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Stage_Change_Without_Challan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Registration Initiate&quot;),
    NOT(INCLUDES(Sub_Document_Type__c, &quot;Challan&quot;))
)</errorConditionFormula>
    <errorMessage>You cannot change the Stage to &apos;Registration Initiate&apos; unless &apos;Challan&apos; is not uploaded.</errorMessage>
</ValidationRule>