force-app/main/default/objects/Opportunity/validationRules/Restrict_Stage_to_AOS_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Stage_to_AOS_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;AOS&quot;),
    NOT(ISPICKVAL(AOS_Stage__c, &quot;Initiate&quot;))
)</errorConditionFormula>
    <errorMessage>Stage can be changed to &apos;AOS&apos; only when &apos;AOS Stage&apos; is set to &apos;Initiated&apos;.</errorMessage>
</ValidationRule>