force-app/main/default/objects/Opportunity/validationRules/Settle_all_the_payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Settle_all_the_payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName ),
    ISPICKVAL( StageName , &quot;Reg Initiate&quot;),
    Outstanding_Amount__c  &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>Kindly settle all the payment</errorMessage>
</ValidationRule>