force-app/main/default/objects/Opportunity/validationRules/Stage_cannot_be_Registered_Schedule.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_cannot_be_Registered_Schedule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED( StageName ),
    ISPICKVAL( StageName , &quot;Registration Scheduled&quot;), 
    NOT(INCLUDES( Sub_Document_Type__c, &quot;Form 32&quot;))
)</errorConditionFormula>
    <errorMessage>Stage cannot be &apos;Registered Schedule&apos; until Form32 is submitted</errorMessage>
</ValidationRule>