force-app/main/default/objects/Opportunity/validationRules/Validate_AOS_TypeOfBooking.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_AOS_TypeOfBooking</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;AOS&quot;),
    ISPICKVAL(Type_of_Booking__c, &quot;&quot;),
    NOT(ISPICKVAL(PRIORVALUE(StageName), &quot;AOS&quot;))
)</errorConditionFormula>
    <errorMessage>Type of Booking is required when Stage is moved to AOS.</errorMessage>
</ValidationRule>