force-app/main/default/objects/Opportunity/listViews/CRM_Manager.listView-meta.xml
<ListView>
    <fullName>CRM_Manager</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Default</value>
    </filters>
    <label>CRM Manager</label>
    <sharedTo>
        <group>CRM_Manager</group>
    </sharedTo>
</ListView>